--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,8 @@
     <string name="account_label_prompt_limit">Free prompt words:</string>
     <string name="account_label_response_limit">Free response words:</string>
     <string name="account_label_purchased_words">Purchased words:</string>
+    <string name="purchased_words_consumption">Purchased words will only be consumed after free
+        prompt/response lengths are exceeded.</string>
     <string name="login_failed">Login failed:</string>
     <string name="logged_out">Logged out</string>
     <string name="upgrade">Upgrade</string>
