--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="audio_icon_left_auto" translatable="false">🔊</string>
     <string name="audio_icon_left_manual" translatable="false">🔈</string>
     <string name="audio_icon_left_random" translatable="false">🎲</string>
-    <string name="html_purchase_words" translatable="false"><a href="lightning:bitanon@getalby.com" description="account_email">bitanon@getalby.com</a></string>
+    <string name="html_purchase_words" translatable="false"><a href="lightning:bitanon@getalby.com" comment="account_email">bitanon@getalby.com</a></string>
 
 
     <!-- DO translate -->
@@ -51,11 +51,14 @@
         prompt/response lengths are exceeded.</string>
     <string name="login_failed">Login failed:</string>
     <string name="logged_out">Logged out</string>
-    <string name="upgrade">Upgrade</string>
     <string name="remove_limits">Remove prompt and response limits by logging in and purchasing
         additional word counts, using Bitcoin\'s Lightning Network.</string>
-    <string name="purchase_additional_words">You can purchase additional words to increase prompt
-        and response lengths by sending a Lightning payment to:</string>
+
+    <!-- Upgrade Activity -->
+    <string name="upgrade">Upgrade</string>
+    <string name="purchase_additional_words">You can increase prompt and response lengths by
+        sending ₿ Lightning payments to:</string>
+    <string name="send_ln_payment">Send LN Payment</string>
     <string name="transaction_details">Transaction details</string>
     <string name="purchase_price">Price: 1sat/word</string>
     <string name="purchase_required_info">Required description: account email (%s)</string>
