--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Chat Fragment -->
     <string name="alertdialog_terms_agreement_title">Términos y Acuerdo de Privacidad</string>
     <string name="exit">Salida</string>
     <string name="accept">Aceptar</string>
@@ -12,6 +14,7 @@
         compatible con su idioma :(</string>
     <string name="toast_enter_prompt">Primero, ingrese una solicitud.</string>
     <string name="toast_no_internet">Sin conexión a Internet. Conectar y volver a intentar.</string>
+    <string name="toast_used_purchased_words">La respuesta usó %s palabras compradas.</string>
     <string name="toast_prompt_truncated">Se ha alcanzado la longitud máxima de solicitud gratuita:
          \nInicie sesión o actualice para obtener indicaciones y respuestas más largas.</string>
     <string name="append_response_truncated">***Longitud máxima de respuesta libre excedida:
