--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -49,22 +49,24 @@
     <!-- Upgrade Activity -->
     <string name="upgrade">Mise à niveau</string>
     <string name="purchase_additional_words">Vous pouvez augmenter la durée des invites et des
-        réponses en envoyant des paiements ₿ Lightning à :</string>
+        réponses en envoyant des paiements en ₿ sur le Lightning Network (LN) :</string>
     <string name="send_ln_payment">Envoyer le paiement LN</string>
     <string name="transaction_details">Détails de la transaction</string>
     <string name="purchase_price">Prix : 1sat/mot</string>
-    <string name="purchase_required_info">Description requise : adresse e-mail du compte (%s)</string>
-    <string name="purchase_notice_tips">Remarque : l\'e-mail ci-dessus est nécessaire pour associer votre
-         paiement avec votre compte.\nTous les paiements n\'incluant pas d\'e-mail de compte valide dans le
-         la description de la transaction (commentaire) sera traitée comme des pourboires.\nJusqu\'à
-        ce que les paiements soient entièrement automatisé, cela peut prendre quelques heures pour
+    <string name="purchase_notice">Remarque : en fonction de votre porte-monnaie, les transactions
+        peuvent ne pas encore être entièrement automatisées et peuvent prendre quelques heures pour
         que les mots achetés soient crédités sur votre compte.</string>
     <string name="lightning_wallets">Portefeuilles Lightning</string>
     <string name="get_lightning_wallet">Si vous n\'avez pas encore de portefeuille Bitcoin Lightning,
          vous devrez en obtenir un :</string>
     <string name="html_lightning_wallet_phoenix"><a href="https://phoenix.acinq.co/">Phoenix (application non privative de liberté)</a></string>
     <string name="html_getalby"><a href="https://getalby.com/">GetAlby (extension de navigateur dépositaire)</a></string>
-
+    <string name="manual_transaction_alternative_label">Transaction LN manuelle</string>
+    <string name="manual_transaction_alternative">Alternativement, vous pouvez également acheter des
+        mots en envoyant manuellement des transactions depuis un autre portefeuille (tel qu\'Alby)
+        à l\'adresse Lightning suivante et en incluant le commentaire ci-dessous.</string>
+    <string name="lnurl_address">Adresse lnurl :</string>
+    <string name="lnurl_required_comment">Commentaire obligatoire :</string>
 
     <!-- Settings Activity -->
     <string name="title_activity_settings">Paramètres</string>
