--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -40,7 +40,8 @@
     <string name="account_label_response_limit">Palabras de respuesta gratuito:</string>
     <string name="account_label_purchased_words">Palabras compradas:</string>
     <string name="purchased_words_consumption">Las palabras compradas solo se consumirán después de
-        que se superen las longitudes de solicitud/respuesta gratuitas.</string>
+        que se superen las longitudes de solicitud/respuesta gratuitas o para bloquear anuncios.</string>
+    <string name="block_ads">Bloquear anuncios (50 palabras/anuncio)</string>
     <string name="login_failed">Error de inicio de sesion:</string>
     <string name="logged_out">Cerrado sesión</string>
     <string name="remove_limits">Elimine los límites de solicitud y respuesta iniciando sesión y
