--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -49,14 +49,13 @@
 
     <!-- Upgrade Activity -->
     <string name="upgrade">Ascender de Categoría</string>
-    <string name="purchase_additional_words">Puede aumentar la duración de las indicaciones y las
-        respuestas enviando pagos en ₿ a través de Lightning Network (LN):</string>
-    <string name="send_ln_payment">Enviar pago de LN</string>
+    <string name="instant_payment">Pago Instantáneo de LN</string>
+    <string name="purchase_additional_words">Puede aumentar la duración de las solicitudes/respuestas
+        y eliminar anuncios enviando pagos en ₿ a través de Lightning Network (LN):</string>
+    <string name="send">Enviar</string>
+    <string name="transaction_send">Envíe el pago desde la billetera LN de su dispositivo.</string>
     <string name="transaction_details">Detalles de la transacción</string>
     <string name="purchase_price">Precio: 1sat/palabra</string>
-    <string name="purchase_notice">Aviso: dependiendo de su billetera, es posible que las
-        transacciones aún no estén completamente automatizadas y que las palabras compradas tarden
-        algunas horas en acreditarse en su cuenta.</string>
     <string name="purchase_words">Comprar palabras</string>
     <string name="dialog_purchase_words_amount">Cantidad (sats):</string>
     <string name="cancel">Cancelar</string>
@@ -64,16 +63,18 @@
     <string name="toast_purchase_words_verification_error">Error con la verificación automática del pago de LN.
         Es posible que las palabras compradas tarden algunas horas en agregarse a su cuenta.</string>
     <string name="lightning_wallets">Carteras relámpago</string>
-    <string name="get_lightning_wallet">Si aún no tiene una billetera Bitcoin Lightning,
-         Necesitarás conseguir uno:</string>
+    <string name="get_lightning_wallet">Para enviar pagos de LN, primero deberá instalar y
+        financiar una billetera Lightning en su dispositivo:</string>
     <string name="html_lightning_wallet_phoenix"><a href="https://phoenix.acinq.co/">Phoenix (aplicación sin custodia)</a></string>
     <string name="html_getalby"><a href="https://getalby.com/">GetAlby (extensión de navegador de custodia)</a></string>
-    <string name="manual_transaction_alternative_label">Transacción manual de LN</string>
+    <string name="manual_transaction_alternative_label">Transacción Manual de LN</string>
     <string name="manual_transaction_alternative">Alternativamente, también puede comprar palabras
         enviando transacciones manualmente desde otra billetera (como Alby) a la siguiente dirección
         Lightning e incluyendo el comentario a continuación.</string>
     <string name="lnurl_address">Dirección lnurl:</string>
     <string name="lnurl_required_comment">Comentario requerido:</string>
+    <string name="manual_payments_slow">Al usar este método, pueden pasar algunas horas
+        hasta que su cuenta se acredite con las palabras compradas.</string>
 
 
     <!-- Settings Activity -->
