--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 
     <!-- DO NOT translate -->
     <string name="admob_app_id" translatable="false">ca-app-pub-9043912704472803~9575294075</string>
-    <string name="chatgpt3_playstore_link" translatable="false">https://play.google.com/store/apps/details?id=org.bitanon.chatgpt3</string>
-    <string name="app_name" translatable="false">ChatGPT3</string>
+    <string name="chatgpt3_playstore_link" translatable="false">https://play.google.com/store/apps/details?id=org.bitanon.gpt4btc</string>
+    <string name="app_name" translatable="false">GPT4BTC</string>
     <string name="anon" translatable="false">Anon</string>
     <string name="audio_icon_left_auto" translatable="false">🔊</string>
     <string name="audio_icon_left_manual" translatable="false">🔈</string>
